consent: responsive fix on mobile view

--- a/styles/components/Consent.module.scss
+++ b/styles/components/Consent.module.scss
@@ -259,7 +259,7 @@
 
 @media (max-width: 430px) {
   .mainContainer {
-    height: 160px;
+    height: 170px;
   }
 
   .text {
@@ -299,7 +299,7 @@
 
 @media (max-width: 355px) {
   .mainContainer {
-    height: 180px;
+    height: 185px;
   }
 
   .text {
